# cyb-ts-esra

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  biome.json  deno.json  docker-compose.yml  netlify.toml  package.json  rspack.config.common.js  rspack.config.dev.js  rspack.config.prod.js  tsconfig.json
.claude/plans/: 001-migrate-node-to-deno-rspack.md  002-remove-node-deps.md  003-bevy-shell.md  004-remove-egui-add-ascii-terminal.md  composed-bubbling-floyd.md
.github/workflows/: build_cyb.yml  build_cyb_rebyc.yml  build_ipfs.yml
cyb/: Cargo.toml  Makefile
cyb/.cargo/: config.toml
cyb/cyb-portal/: Cargo.toml  Trunk.toml  index.html  style.css
cyb/cyb-portal/src/: main.rs
cyb/cyb-services/: Cargo.toml
cyb/cyb-services/src/: db.rs  ipfs.rs  lib.rs  mining.rs
cyb/cyb-shell/: Cargo.toml
cyb/cyb-shell/assets/nu-config/: config.nu  env.nu
cyb/cyb-shell/src/: main.rs
cyb/cyb-shell/src/agent/: browser.rs  mod.rs
cyb/cyb-shell/src/shell/: hotkeys.rs  tray.rs
cyb/cyb-shell/src/worlds/: browser.rs  game.rs  interface.rs  legacy.rs  mod.rs  portal.rs  terminal.rs  ui.rs
cyb/cyb-ui/: Cargo.toml  Dioxus.toml
cyb/cyb-ui/src/: main.rs
cyb/docs/: architecture.md
docs/: ARCHITECTURE_AUDIT.md  terminal.md
public/: service-worker.js
public/.well-known/: apple-app-site-association  assetlinks.json
reference/: benchmarks.md  roadmap.md
src/: index.html  index.tsx  router.tsx  routes.ts
src/components/: index.js
src/constants/: app.ts  config.ts  defaultNetworks.ts  hubContracts.ts  patterns.ts
src/contexts/: analytics.tsx  appData.tsx  device.tsx  hub.tsx  ibcDenom.tsx  networks.tsx  previousPage.tsx  queryClient.tsx  queryCyberClient.tsx  relayer.tsx  signerClient.tsx
src/hooks/: getBalances.ts  useActiveMenuItem.ts  useAllDenomTraces.ts  useDebounce.tsx  useDeepCompareEffect.ts  useEPubLocation.tsx  useExecutionWithWaitAndAdviser.ts  useGetMarketData.ts  useGetTotalSupply.ts  useGetWarpPools.ts  useHub.ts  useIsOnline.tsx  useLog.ts  useMediaQuery.js  useParticle.ts  usePoolListInterval.ts  useQueryClientMethod.ts  useQueueIpfsContent.ts  useRuneMutation.ts  useSetActiveAddress.ts  useTracesNetworks.ts  useWaitForTransaction.ts
src/i18n/: en.js
src/layouts/: Main.tsx
src/redux/: store.ts  types.d.ts
src/routing/: Brain.tsx
src/style/: global.css  libs.css  main.css  popups.css
src/types/: dto.ts  networks.ts  tsfix.d.ts  window.d.ts
src/utils/: address.ts  assert-shim.js  axios.ts  date.ts  (+10 more)
(+766 files in other folders)
