[workspace]
resolver = "2"
members = ["cyb-shell", "cyb-ui", "cyb-services"]
exclude = ["vendor/rio-backend", "vendor/copa"]

[workspace.dependencies]
bevy = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
