[package]
name = "cyb-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
global-hotkey = "0.7.0"
wry = "0.53"
alacritty_terminal = "0.25.1"
sugarloaf = { path = "../vendor/sugarloaf" }
tray-icon = "0.21"
futures = "0.3"

# Nushell embedded engine
nu-protocol = { path = "../vendor/nushell/crates/nu-protocol" }
nu-engine = { path = "../vendor/nushell/crates/nu-engine" }
nu-parser = { path = "../vendor/nushell/crates/nu-parser" }
nu-command = { path = "../vendor/nushell/crates/nu-command", default-features = false, features = ["os"] }
nu-cmd-lang = { path = "../vendor/nushell/crates/nu-cmd-lang" }
nu-cmd-extra = { path = "../vendor/nushell/crates/nu-cmd-extra" }
nu-cli = { path = "../vendor/nushell/crates/nu-cli" }
nu-std = { path = "../vendor/nushell/crates/nu-std" }
nu-utils = { path = "../vendor/nushell/crates/nu-utils" }
